--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,5 +25,5 @@ spring.thymeleaf.cache=false
 # ==============================================================
 # = Spring Security / Queries for AuthenticationManagerBuilder  
 # ==============================================================
-spring.queries.users-query=select email, password, activo from usuarios where email=?
-spring.queries.roles-query=select u.email, u.rol from usuarios u where u.email=?
+spring.queries.users-query=SELECT u.email, u.password, u.activo FROM (SELECT * FROM profesores UNION SELECT * FROM alumnos) u WHERE u.email=?
+spring.queries.roles-query=SELECT u.email, u.activo FROM (SELECT * FROM profesores UNION SELECT * FROM alumnos) u WHERE u.email=?
