--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,4 @@ spring.thymeleaf.cache=false
 spring.queries.users-query=SELECT u.email, u.password, u.activo FROM usuarios u WHERE u.email=?
 spring.queries.roles-query=SELECT u.email, u.activo FROM usuarios u WHERE u.email=?
 
+server.port=9000
